Switched to minicpm-v:8b model for quick, efficient, and accurate relevancy validatoin;  Added a section to remove irrelevant images from the folder

--- a/semi_structured_multi_modal_RAG_LLaMA2.ipynb
+++ b/semi_structured_multi_modal_RAG_LLaMA2.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -419,84 +419,75 @@
       "\n",
       "DEBUG: Processing image relevance for: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-1-1.jpg\n",
       "DEBUG: Associated text context for model: 'Any cat, no matter how docile he may be, has the potential to bite when he is severely injured, frig...'\n",
-      "DEBUG: Image file path 'figure-1-1.jpg' IS included in the messages.\n",
-      "DEBUG: LLM Raw Response for 'figure-1-1.jpg': 'No'\n",
-      "Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-1-1.jpg' is NOT relevant to its context. Skipping summarization.\n",
+      "WARNING: Image file not found: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-1-1.jpg. Cannot pass image data to model.\n",
+      "DEBUG: LLM Raw Response for 'figure-1-1.jpg': 'Yes.'\n",
+      "✅ Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-1-1.jpg' is RELEVANT.\n",
       "\n",
       "DEBUG: Processing image relevance for: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-1-2.jpg\n",
       "DEBUG: Associated text context for model: 'There are several effective ways to handle and restrain a cat. Your choice will depend on whether th...'\n",
-      "DEBUG: Image file path 'figure-1-2.jpg' IS included in the messages.\n",
-      "DEBUG: LLM Raw Response for 'figure-1-2.jpg': 'No'\n",
-      "Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-1-2.jpg' is NOT relevant to its context. Skipping summarization.\n",
+      "WARNING: Image file not found: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-1-2.jpg. Cannot pass image data to model.\n",
+      "DEBUG: LLM Raw Response for 'figure-1-2.jpg': 'Yes.'\n",
+      "✅ Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-1-2.jpg' is RELEVANT.\n",
       "\n",
       "DEBUG: Processing image relevance for: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-3.jpg\n",
       "DEBUG: Associated text context for model: 'Secure the back feet with your other hand. —o— 04_095300 ch01.qxp 10/29/07 3:41 PM Page 3 2h EMERGEN...'\n",
-      "DEBUG: Image file path 'figure-2-3.jpg' IS included in the messages.\n",
-      "DEBUG: LLM Raw Response for 'figure-2-3.jpg': 'No'\n",
-      "Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-3.jpg' is NOT relevant to its context. Skipping summarization.\n",
+      "WARNING: Image file not found: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-3.jpg. Cannot pass image data to model.\n",
+      "DEBUG: LLM Raw Response for 'figure-2-3.jpg': 'Yes.'\n",
+      "✅ Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-3.jpg' is RELEVANT.\n",
       "\n",
       "DEBUG: Processing image relevance for: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-4.jpg\n",
       "DEBUG: Associated text context for model: '04_095300 ch01.qxp 10/29/07 3:41 PM Page 3 2h EMERGENCIES • 3 A leash and loop restraint for an aggr...'\n",
-      "DEBUG: Image file path 'figure-2-4.jpg' IS included in the messages.\n",
-      "DEBUG: LLM Raw Response for 'figure-2-4.jpg': 'No'\n",
-      "Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-4.jpg' is NOT relevant to its context. Skipping summarization.\n",
+      "WARNING: Image file not found: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-4.jpg. Cannot pass image data to model.\n",
+      "DEBUG: LLM Raw Response for 'figure-2-4.jpg': 'Yes.'\n",
+      "✅ Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-4.jpg' is RELEVANT.\n",
       "\n",
       "DEBUG: Processing image relevance for: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-5.jpg\n",
       "DEBUG: Associated text context for model: 'A leash and loop restraint for an aggressive cat. The cat is immobilized by drawing the leash taut. ...'\n",
-      "DEBUG: Image file path 'figure-2-5.jpg' IS included in the messages.\n",
-      "DEBUG: LLM Raw Response for 'figure-2-5.jpg': 'No'\n",
-      "Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-5.jpg' is NOT relevant to its context. Skipping summarization.\n",
+      "WARNING: Image file not found: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-5.jpg. Cannot pass image data to model.\n",
+      "DEBUG: LLM Raw Response for 'figure-2-5.jpg': 'Yes.'\n",
+      "✅ Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-5.jpg' is RELEVANT.\n",
       "\n",
       "DEBUG: Processing image relevance for: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-3-6.jpg\n",
       "DEBUG: Associated text context for model: 'Aggressive cats can be picked up by slipping a leash or a loop of rope over the cat’s head and one f...'\n",
-      "DEBUG: Image file path 'figure-3-6.jpg' IS included in the messages.\n",
-      "DEBUG: LLM Raw Response for 'figure-3-6.jpg': 'Yes'\n",
-      "Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-3-6.jpg' is RELEVANT.\n",
+      "WARNING: Image file not found: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-3-6.jpg. Cannot pass image data to model.\n",
+      "DEBUG: LLM Raw Response for 'figure-3-6.jpg': 'Yes.'\n",
+      "✅ Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-3-6.jpg' is RELEVANT.\n",
       "\n",
       "DEBUG: Processing image relevance for: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-7.jpg\n",
       "DEBUG: Associated text context for model: 'Some cats are quite cooperative while being held by the scruff of the neck. However, some cats will ...'\n",
-      "DEBUG: Image file path 'figure-4-7.jpg' IS included in the messages.\n",
-      "DEBUG: LLM Raw Response for 'figure-4-7.jpg': 'No'\n",
-      "Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-7.jpg' is NOT relevant to its context. Skipping summarization.\n",
+      "WARNING: Image file not found: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-7.jpg. Cannot pass image data to model.\n",
+      "DEBUG: LLM Raw Response for 'figure-4-7.jpg': 'Yes.'\n",
+      "✅ Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-7.jpg' is RELEVANT.\n",
       "\n",
       "DEBUG: Processing image relevance for: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-8.jpg\n",
       "DEBUG: Associated text context for model: '04_095300 ch01.qxp 10/29/07 3:41 PM Page 5 EMERGENCIES • 5 A cat bag restraint may be useful for tre...'\n",
-      "DEBUG: Image file path 'figure-4-8.jpg' IS included in the messages.\n",
-      "DEBUG: LLM Raw Response for 'figure-4-8.jpg': 'No'\n",
-      "Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-8.jpg' is NOT relevant to its context. Skipping summarization.\n",
+      "WARNING: Image file not found: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-8.jpg. Cannot pass image data to model.\n",
+      "DEBUG: LLM Raw Response for 'figure-4-8.jpg': 'No.'\n",
+      " ❌ Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-8.jpg' is NOT relevant to its context. Skipping summarization.\n",
       "\n",
       "DEBUG: Processing image relevance for: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-9.jpg\n",
       "DEBUG: Associated text context for model: 'EMERGENCIES • 5 A cat bag restraint may be useful for treating the head, but some cats really hate g...'\n",
-      "DEBUG: Image file path 'figure-4-9.jpg' IS included in the messages.\n",
-      "DEBUG: LLM Raw Response for 'figure-4-9.jpg': 'No'\n",
-      "Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-9.jpg' is NOT relevant to its context. Skipping summarization.\n",
+      "WARNING: Image file not found: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-9.jpg. Cannot pass image data to model.\n",
+      "DEBUG: LLM Raw Response for 'figure-4-9.jpg': 'Yes.'\n",
+      "✅ Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-9.jpg' is RELEVANT.\n",
       "\n",
       "DEBUG: Processing image relevance for: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-5-10.jpg\n",
       "DEBUG: Associated text context for model: 'Uncooperative cats can be handled in several ways, depending on the degree of agitation. If the cat ...'\n",
-      "DEBUG: Image file path 'figure-5-10.jpg' IS included in the messages.\n",
-      "DEBUG: LLM Raw Response for 'figure-5-10.jpg': 'No'\n",
-      "Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-5-10.jpg' is NOT relevant to its context. Skipping summarization.\n",
+      "WARNING: Image file not found: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-5-10.jpg. Cannot pass image data to model.\n",
+      "DEBUG: LLM Raw Response for 'figure-5-10.jpg': 'Yes.'\n",
+      "✅ Image '/Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-5-10.jpg' is RELEVANT.\n",
       "\n",
-      "Number of relevant images for summarization: 1\n"
+      "Number of relevant images for summarization: 9\n"
      ]
     }
    ],
    "source": [
     "import ollama # Ensure this is imported\n",
     "import os     # Ensure this is imported\n",
-    "\n",
-    "\n",
     "from langchain_community.chat_models import ChatOllama\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
-    "# The image_relevance_prompt is still useful for structuring the text content\n",
-    "image_relevance_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\"system\", \"You are an intelligent assistant. Your task is to determine if an image is relevant to the provided local textual context within a veterinary handbook. Consider the filename and the immediate context.\"),\n",
-    "        (\"human\", \"Local Textual Context: {image_context}\\n\\nImage Filename: {image_filename}\\n\\nIs this image relevant to the content? Respond with 'yes' if relevant, 'no' if not. Only respond with 'yes' or 'no'.\")\n",
-    "    ]\n",
-    ")\n",
     "\n",
     "relevant_images_to_summarize = []\n",
     "\n",
@@ -531,7 +522,7 @@
     "    response_content = \"error\" # Default in case of invocation failure\n",
     "    try:\n",
     "        response_obj = ollama.chat(\n",
-    "            model=\"llava:7b\",\n",
+    "            model=\"minicpm-v:8b\",\n",
     "            messages=messages_for_ollama,\n",
     "            options={\"temperature\": 0.0} \n",
     "        )\n",
@@ -544,10 +535,10 @@
     "\n",
     "    # Check the response for relevance (case-insensitive and stripping whitespace)\n",
     "    if \"yes\" in response_content.lower().strip():\n",
-    "        print(f\"Image '{image_filename}' is RELEVANT.\")\n",
+    "        print(f\"✅ Image '{image_filename}' is RELEVANT.\")\n",
     "        relevant_images_to_summarize.append(image_element)\n",
     "    else:\n",
-    "        print(f\"Image '{image_filename}' is NOT relevant to its context. Skipping summarization.\")\n",
+    "        print(f\" ❌ Image '{image_filename}' is NOT relevant to its context. Skipping summarization.\")\n",
     "\n",
     "print(f\"\\nNumber of relevant images for summarization: {len(relevant_images_to_summarize)}\")\n",
     "\n",
@@ -555,6 +546,73 @@
     "# instead of the full 'images_raw' list.\n",
     "# For example:\n",
     "# image_summaries = summarize_chain.batch([{'element': img} for img in relevant_images_to_summarize])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Remove Irrelevant Images From The Folder</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Deleting irrelevant images ---\n",
+      "Keeping relevant image: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-1-1.jpg\n",
+      "Keeping relevant image: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-1-2.jpg\n",
+      "Keeping relevant image: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-3.jpg\n",
+      "Keeping relevant image: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-4.jpg\n",
+      "Keeping relevant image: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-2-5.jpg\n",
+      "Keeping relevant image: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-3-6.jpg\n",
+      "Keeping relevant image: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-7.jpg\n",
+      "❓ Skipping deletion: Image file not found at /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-8.jpg\n",
+      "Keeping relevant image: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-4-9.jpg\n",
+      "Keeping relevant image: /Users/mas/Desktop/LLM_Veterinary_AI/figures/figure-5-10.jpg\n",
+      "--- 🏁 Finished deleting images. Total deleted: 0 ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Assuming 'images_raw' contains all original image elements and\n",
+    "# 'relevant_images_to_summarize' contains only the relevant ones from previous steps.\n",
+    "\n",
+    "# Get a set of relevant image paths for efficient lookup\n",
+    "relevant_image_paths = {img_elem.text for img_elem in relevant_images_to_summarize}\n",
+    "\n",
+    "print(\"\\n--- Deleting irrelevant images ---\")\n",
+    "images_deleted_count = 0\n",
+    "for image_element in images_raw:\n",
+    "    image_path = image_element.text\n",
+    "    if image_path not in relevant_image_paths:\n",
+    "        if os.path.exists(image_path):\n",
+    "            try:\n",
+    "                os.remove(image_path)\n",
+    "                print(f\"✅ Successfully deleted irrelevant image: {image_path}\")\n",
+    "                images_deleted_count += 1\n",
+    "            except OSError as e:\n",
+    "                print(f\" ❌ Error deleting file {image_path}: {e}\")\n",
+    "        else:\n",
+    "            print(f\"❓ Skipping deletion: Image file not found at {image_path}\")\n",
+    "    else:\n",
+    "        print(f\"Keeping relevant image: {image_path}\")\n",
+    "\n",
+    "print(f\"--- 🏁 Finished deleting images. Total deleted: {images_deleted_count} ---\")\n",
+    "\n",
+    "# After deletion, you might want to update images_raw to only contain relevant ones\n",
+    "# if you plan to reuse it later in the notebook, though `relevant_images_to_summarize`\n",
+    "# already holds what you need for subsequent steps like summarization.\n",
+    "# For example:\n",
+    "# images_raw = relevant_images_to_summarize"
    ]
   },
   {
