Switched from GPT4AllEmbedding model to OpenClip model for multimodal; modified vectorstore and docstore; modified image summary prompt; Now it retrieve text and image in the same vector space

--- a/experiment/tests.ipynb
+++ b/experiment/tests.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -245,38 +245,18 @@
       "Original refined query: Refined Query:\n",
       "\n",
       "\"I'm concerned about my adult cat's sudden distress and possible illness, characterized by matted fur around its neck and chest, wide open eyes indicating alertness, anxiety, or discomfort, and perked-up ears. The cat's coat displays brown, black, and white patches. I'd like to know  ....\n",
-      "--------------------------------------------------------------------------------\n",
-      "Decomposed queries:\n",
-      "Here is the broken down list of simpler sub-queries:\n",
-      "\n",
-      "1. What are common feline illnesses that can cause vomiting, diarrhea, lethargy, or difficulty breathing, characterized by matted fur around the neck and chest?\n",
-      "\n",
-      "2. Are there any underlying medical conditions in cats that can lead to poor grooming habits resulting in matted fur, such as skin allergies or gastrointestinal issues?\n",
-      "\n",
-      "3. What are recent stressors that may have contributed to a cat's sudden distress, including changes in environment, new pets, or other potential triggers?\n",
-      "\n",
-      "4. How often should I provide fresh water for my cat, and what signs indicate dehydration in cats?\n",
-      "\n",
-      "5. What type of food would be suitable for a cat with matted fur and possible illness, considering their specific nutritional needs and health status?\n",
-      "\n",
-      "6. Can adding supplements to a cat's diet help alleviate symptoms associated with matted fur and potential illness?\n",
-      "\n",
-      "7. What are some common stress-reducing techniques that can help minimize my cat's anxiety and improve its overall well-being?\n",
-      "\n",
-      "8. Are there any products or pheromone-based treatments available to help calm stressed cats and promote relaxation?\n",
-      "\n",
-      "9. How often should I clean and groom my cat's coat to prevent matted fur, especially considering their specific grooming needs during a period of illness or stress?\n",
-      "\n",
-      "10. What are some general guidelines for recognizing the signs and symptoms of poor grooming habits in cats due to health issues, such as skin conditions or dental problems?\n",
-      "\n",
-      "11. Can feline veterinary professionals recommend any home remedies or natural treatments that may help alleviate my cat's distress and promote recovery?\n",
-      "\n",
-      "12. Are there any recommended stress-reducing products or tools that I can use in my home environment to create a calm and comfortable space for my cat?\n",
-      "\n",
-      "13. What are some general tips for providing the best care for cats experiencing distress or illness, including monitoring their behavior, appetite, and hydration levels?\n",
-      "\n",
-      "14. How often should I schedule veterinary check-ups for my cat to ensure timely diagnosis and treatment of any underlying medical conditions contributing to their current condition?\n"
+      "--------------------------------------------------------------------------------\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"What are the possible medical causes of matted fur around my adult cat's neck and chest?\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -293,9 +273,9 @@
     "\n",
     "# Create the query decomposition chain\n",
     "query_decomposition_chain = (\n",
-    "    query_decomposition_prompt  # Prompt first\n",
-    "    | query_refinement_model    # Then the model\n",
-    "    | JsonOutputParser() # Use JsonOutputParser instead of StrOutputParser() | json.loads\n",
+    "    query_decomposition_prompt  \n",
+    "    | query_refinement_model    \n",
+    "    | JsonOutputParser() \n",
     ")\n",
     "\n",
     "# --- Demonstration of query decomposition ---\n",
@@ -305,7 +285,9 @@
     "decomposed_queries = query_decomposition_chain.invoke({\"refined_query\": refined_query})\n",
     "\n",
     "print(\"-\" * 80)\n",
-    "print(f\"Decomposed queries:\\n{decomposed_queries}\")"
+    "# print(f\"Decomposed queries:\\n{decomposed_queries}\")\n",
+    "\n",
+    "decomposed_queries[0]"
    ]
   }
  ],
