--- a/experiment/query+img.ipynb
+++ b/experiment/query+img.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction\n",
+    "\n",
+    "In this notebook, we will experiment with how user queries are handled in our veterinary information retrieval system. Several collections have already been set up in the Chroma database, allowing us to directly perform information retrieval without additional setup. This environment enables us to test and refine the process of transforming user input into actionable queries and retrieving relevant information from our knowledge base."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,55 +22,46 @@
     "from langchain_core.documents import Document\n",
     "import os\n",
     "\n",
-    "persist_directory = './textbook_test_example1/'\n",
+    "persist_directory = '../chroma/textbook_test_Nutrition'\n",
+    "#persist_directory = '../chroma/textbook_test_parasites'\n",
     "id_key = \"doc_id\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize Chroma vectorstore for summaries\n",
-    "vectorstore_summaries = Chroma(collection_name=\"summaries\", persist_directory=persist_directory, embedding_function=GPT4AllEmbeddings())\n",
-    "# Initialize Chroma vectorstore for original texts\n",
-    "vectorstore_original_texts = Chroma(collection_name=\"original_texts\", persist_directory=persist_directory, embedding_function=GPT4AllEmbeddings())\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Handling User Input: Analysis Image"
+    "# Handling User Input: Analysis Image\n",
+    "\n",
+    "Let's use a image of a under weighted cat. This cat is considerablly skinny with bones showing. \n",
+    "\n",
+    "  ![Skinney Cat](./skinny_cat.jpg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " ⏳ Processing image: ./cat.jpg\n",
+      " ⏳ Processing image: ./skinny_cat.jpg\n",
       "--- Generated Image Summary ---\n",
-      "The image depicts an adult cat with visible signs of distress and possible illness. The feline has prominent fur that appears matted in several areas, particularly around its neck and chest, indicating it may have been through a stressful event or is unwell. Its coat coloration includes brown, black, and white patches.\n",
+      "The image depicts an adult cat with light-colored fur standing on terracotta-tiled flooring. The feline appears to be a domestic short-haired breed and has a collar around its neck adorned with what seems like bells or tags near the base of the tail, which is visible in profile. Its ears are perked up, indicating alertness.\n",
       "\n",
-      "Its eyes are wide open, which can sometimes indicate alertness, anxiety, or discomfort. The cat's ears are perked up but not in an aggressive stance; this could suggest curiosity rather than aggression. Notably, the cat has a patch of fur that seems to be matted or missing, revealing pink skin underneath.\n",
+      "The cat's head is turned towards a green plastic bowl placed on the ground slightly behind it; however, it does not seem to be drinking from it at this moment as its mouth is closed and facing away from the water source. The bowl appears clean with some scattered small debris or food particles around its rim.\n",
       "\n",
-      "The feline is surrounded by pet supplies: there is a food bowl with what appears to be dry kibble and another container possibly filled with wet food or supplements; a blue water dish suggesting hydration provision for the animal. There's also an empty metallic feeding pan which could have been used earlier. \n",
+      "In the background, there's an open door leading into a dimly lit area that could possibly be indoors, suggesting that this scene might take place in a transitional space between inside and outside of a building. There are also partial views of what appear to be metal objects and perhaps some greenery or another animal partially visible at the top edge of the image.\n",
       "\n",
-      "In the background, a pink blanket suggests that this area might serve as a comfortable resting spot. The flooring is a light color, likely tile, and the overall setting seems to be indoors.\n",
-      "\n",
-      "No discernible text or specific context about why the cat appears in such condition can be inferred from the image alone. It's important for feline veterinary professionals to consider potential causes like illness, poor grooming habits due to health issues, or recent stressors leading up to this state of appearance.\n"
+      "There is no discernible text present within the frame of the photo. The overall context suggests that this cat may be waiting for its meal or has just finished eating, given the proximity to the water bowl typically associated with feeding times in domestic cats.\n"
      ]
     }
    ],
    "source": [
     "query = \"What's going on with my cat? What should I do?\" \n",
-    "image_path = \"./cat.jpg\"\n",
+    "image_path = \"./skinny_cat.jpg\"\n",
     "\n",
     "import base64\n",
     "import ollama # Ensure ollama library is installed (pip install ollama)\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,52 +132,33 @@
      "output_type": "stream",
      "text": [
       "Original user query: What's going on with my cat? What should I do?\n",
-      "Image Summary: The image depicts an adult cat with visible signs of distress and possible illness. The feline has prominent fur that appears matted in several areas, particularly around its neck and chest, indicating it may have been through a stressful event or is unwell. Its coat coloration includes brown, black, and white patches.\n",
+      "Image Summary: The image depicts an adult cat with light-colored fur standing on terracotta-tiled flooring. The feline appears to be a domestic short-haired breed and has a collar around its neck adorned with what seems like bells or tags near the base of the tail, which is visible in profile. Its ears are perked up, indicating alertness.\n",
       "\n",
-      "Its eyes are wide open, which can sometimes indicate alertness, anxiety, or discomfort. The cat's ears are perked up but not in an aggressive stance; this could suggest curiosity rather than aggression. Notably, the cat has a patch of fur that seems to be matted or missing, revealing pink skin underneath.\n",
+      "The cat's head is turned towards a green plastic bowl placed on the ground slightly behind it; however, it does not seem to be drinking from it at this moment as its mouth is closed and facing away from the water source. The bowl appears clean with some scattered small debris or food particles around its rim.\n",
       "\n",
-      "The feline is surrounded by pet supplies: there is a food bowl with what appears to be dry kibble and another container possibly filled with wet food or supplements; a blue water dish suggesting hydration provision for the animal. There's also an empty metallic feeding pan which could have been used earlier. \n",
+      "In the background, there's an open door leading into a dimly lit area that could possibly be indoors, suggesting that this scene might take place in a transitional space between inside and outside of a building. There are also partial views of what appear to be metal objects and perhaps some greenery or another animal partially visible at the top edge of the image.\n",
       "\n",
-      "In the background, a pink blanket suggests that this area might serve as a comfortable resting spot. The flooring is a light color, likely tile, and the overall setting seems to be indoors.\n",
-      "\n",
-      "No discernible text or specific context about why the cat appears in such condition can be inferred from the image alone. It's important for feline veterinary professionals to consider potential causes like illness, poor grooming habits due to health issues, or recent stressors leading up to this state of appearance.\n",
+      "There is no discernible text present within the frame of the photo. The overall context suggests that this cat may be waiting for its meal or has just finished eating, given the proximity to the water bowl typically associated with feeding times in domestic cats.\n",
       "--------------------------------------------------------------------------------\n",
-      "Refined query: Refined Query:\n",
+      "Refined query: Based on the provided query and image description, I've rephrased and expanded it into a more detailed and context-rich query:\n",
       "\n",
-      "\"I'm concerned about my adult cat's sudden distress and possible illness, characterized by matted fur around its neck and chest, wide open eyes indicating alertness, anxiety, or discomfort, and perked-up ears. The cat's coat displays brown, black, and white patches. I'd like to know the potential causes of this condition, including:\n",
+      "**Refined Query:**\n",
       "\n",
-      "1. Illness: What could be causing my cat's symptoms, such as vomiting, diarrhea, lethargy, or difficulty breathing?\n",
-      "2. Poor grooming habits due to health issues: Are there any underlying medical conditions that may have led to poor grooming and matted fur?\n",
-      "3. Recent stressors leading up to this state of appearance: Has my cat been exposed to new pets, changes in environment, or other stressors that could have contributed to its current condition?\n",
+      "\"What appears to be the symptoms or potential health issues of my [light-colored domestic short-haired] cat, given its behavior in the photo? Specifically, considering the cat's perked-up ears, proximity to an empty water bowl, and the presence of scattered food particles, what possible explanations could there be for this cat's condition? Are there any common medical conditions or behavioral issues that might cause a cat to wait near a full food bowl without drinking from it? I'm also curious about potential reasons why my cat may have its collar adorned with bells or tags near the base of the tail. Are these accessories related to identification, health monitoring, or perhaps some other purpose? Could this scene be indicative of a transitional space between indoors and outdoors, such as a screened-in porch or a catio? What are the possible implications for my cat's nutrition, hydration, and overall well-being in this environment?\"\n",
       "\n",
-      "Additionally, I'd like information on:\n",
+      "**Anticipated Related Information:**\n",
       "\n",
-      "* Hydration: How often should I provide fresh water for my cat, and what signs indicate dehydration?\n",
-      "* Nutrition: What type of food would be suitable for a cat with matted fur and possible illness? Should I switch to a different diet or add supplements?\n",
-      "* Stress management: Are there any stress-reducing techniques or products that can help minimize my cat's anxiety and improve its overall well-being?\n",
+      "* Common health issues related to food and water bowl behavior\n",
+      "* Potential causes for a cat's collar having bells or tags near the base of the tail (identification, health monitoring, etc.)\n",
+      "* Nutritional considerations for cats waiting near full food bowls without drinking from them\n",
+      "* Health implications of transitional spaces between indoors and outdoors on feline nutrition and hydration\n",
+      "* Behavioral patterns and potential explanations for perked-up ears in domestic short-haired cats\n",
       "\n",
-      "I'm seeking guidance from feline veterinary professionals on how to provide the best care for my cat, addressing both immediate concerns and long-term health needs.\n",
+      "**Additional Context:**\n",
       "\n",
-      "Relevant keywords:\n",
+      "The image description provides a clear visual representation of the scene, with the cat standing on terracotta-tiled flooring, its collar adorned with bells or tags near the base of the tail, and its head turned towards an empty water bowl. The background suggests a transitional space between indoors and outdoors, with partial views of metal objects and greenery visible at the top edge of the image.\n",
       "\n",
-      "- Matted fur\n",
-      "- Wide open eyes\n",
-      "- Perked-up ears\n",
-      "- Coated coloration (brown, black, white patches)\n",
-      "- Hydration\n",
-      "- Nutrition\n",
-      "- Stress management\n",
-      "\n",
-      "Anticipated related information:\n",
-      "\n",
-      "* Potential causes of illness in cats\n",
-      "* Signs and symptoms of poor grooming habits due to health issues\n",
-      "* Recent stressors that could have led to a cat's current condition\n",
-      "* Recommended diets for cats with matted fur or possible illness\n",
-      "* Stress-reducing techniques and products for felines\n",
-      "* General guidelines for providing the best care for cats experiencing distress or illness\n",
-      "\n",
-      "This refined query aims to provide more context about your cat's situation, including specific symptoms and signs, while also inquiring about potential causes, recommended treatments, and stress management techniques.\n"
+      "This refined query captures the user's concerns about their cat's behavior and overall health, while also exploring potential explanations for the observed symptoms and considering related factors that might impact the cat's well-being.\n"
      ]
     }
    ],
